<resources>
    <string name="app_name">Grading App</string>
    <string name="grading_app">Grading App</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_student">Add Student</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="grade_assignment">Grade Assignment</string>
    <string name="show_grades">Show Grades</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>

    <string name="log_out">Log Out</string>
    <string name="admin">Admin</string>
    <string name="delete_student">Delete Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="total_points">Total Points</string>
    <string name="score">Score</string>
    <string name="admin_page">Admin Page</string>
    <string name="delete_user">Delete User</string>
    <string name="add_category">Add Category</string>
    <string name="modify_category">Modify Category</string>
    <string name="category_name">Category Name</string>
    <string name="change_category">Change Category</string>
    <string name="enter_category_name">Enter Category Name</string>
</resources>