<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:id="@+id/landing_page_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/landing_page_user_TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="user234"
        android:layout_margin="12dp"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_out_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/log_out"
        android:layout_margin="12dp"
        android:textSize="20sp"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/landing_page_TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_student_Button"
        android:layout_marginTop="40dp"
        android:text="@string/add_student"
        android:textSize="24sp"
        android:id="@+id/add_student_Button"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/landing_page_TextView"
        app:layout_constraintStart_toEndOf="@id/add_student_Button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/delete_student"
        android:textSize="24sp"
        android:id="@+id/delete_student_Button"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/add_student_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/add_assignment"
        android:textSize="24sp"
        android:id="@+id/add_assignment_Button"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/add_assignment_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/grade_assignment"
        android:textSize="24sp"
        android:id="@+id/grade_assignment_Button"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/grade_assignment_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/show_grades"
        android:textSize="24sp"
        android:id="@+id/show_grades_Button"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/show_grades_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/admin"
        android:textSize="24sp"
        android:id="@+id/admin_Button"
        android:visibility="invisible"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>