<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grading_app"
        android:id="@+id/grading_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/grading_app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:id="@+id/sign_in_title"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="16dp"
        android:id="@+id/username_EditText"
        android:hint="@string/enter_username"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/username_EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="16dp"
        android:id="@+id/password_EditText"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText"
        android:layout_margin="16dp"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:id="@+id/sign_in_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintBottom_toTopOf="@id/sign_up_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:id="@+id/no_account_TextView"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:id="@+id/sign_up_Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>